# rcontroll

./: .Rbuildignore  .covrignore  .gitignore  404.html  DESCRIPTION  History.Rhistory  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  SI2_disturbance.Rmd  SI4_calibration.Rmd  SI4_sensitivity.Rmd  SI5_calibration_functions.R  Script_calibration.R  ToDo.md  _pkgdown.yml  authors.html  cleanup  cleanup.win  configure  configure.ac  configure.ucrt  configure.win  coverletter.Rmd  cran-comment.html  cran-comment.md  cran-comments.md  doc2word.sh  example2.Rmd  index.html  library.bib  manuscript.Rmd  pkgdown.yml  sensitivity_analysis.Rmd  sitemap.xml  supplementary.Rmd  test_rcontroll.R
R/: RconTROLL.R  RcppExports.R  TROLLoutput.R  TROLLsim.R  TROLLsimstack.R  TROLLv3_climatedaytime12.R  TROLLv3_climatedaytime365.R  TROLLv3_daytimevar.R  TROLLv3_input.R  TROLLv3_output.R  TROLLv3_pointcloud.R  TROLLv3_species.R  TROLLv4_climate.R  TROLLv4_dailyvar.R  TROLLv4_input.R  TROLLv4_output.R  TROLLv4_pedology.R  TROLLv4_pointcloud.R  TROLLv4_species.R  TROLLversion.R  adjust_time.R  aggregate.TROLLsimstack.R  autogif.R  autoplot.troll.R  autoplot.trollsim.R  autoplot.trollstack.R  build.R  climate-misc.R  compareSim.R  compareplot.R  compile_troll.R  date_sim.R  download_era.R  extract_era.R  format_era.R  generate_climate.R  generate_dailyvar.R  generate_lidar.R  generate_parameters.R  getTROLL.R  (+51 more)
articles/: climate.html  index.html  lidar.html  troll.html  workflow.html
bibliography/: library.bib
data/: TROLLv3_climatedaytime365.rda  TROLLv3_input.rda  TROLLv3_output.rda  TROLLv3_soil.rda  TROLLv4_climate.rda  TROLLv4_dailyvar.rda  TROLLv4_input.rda  TROLLv4_output.rda  TROLLv4_pedology.rda  TROLLv4_pointcloud.rda  TROLLv4_species.rda
dev/: developers_guidelines.Rmd
docs/: developers_guidelines.Rmd  developers_guidelines.html
man/: RconTROLL.Rd  TROLL.version.Rd  TROLLoutput-class.Rd  TROLLsim-class.Rd  TROLLsimstack-class.Rd  TROLLv3_climatedaytime12.Rd  TROLLv3_climatedaytime365.Rd  TROLLv3_daytimevar.Rd  TROLLv3_input.Rd  TROLLv3_output.Rd  TROLLv3_pointcloud.Rd  TROLLv3_species.Rd  TROLLv4_climate.Rd  TROLLv4_dailyvar.Rd  TROLLv4_input.Rd  TROLLv4_output.Rd  TROLLv4_pedology.Rd  TROLLv4_pointcloud.Rd  TROLLv4_species.Rd  adjust_time.Rd  aggregate.TROLLsimstack.Rd  autogif.Rd  autoplot-trollsim-method.Rd  autoplot-trollstack-method.Rd  autoplot.troll.Rd  autoplot.trollsim.Rd  autoplot.trollstack.Rd  build.Rd  comparePlot.Rd  compareSim.Rd  compareplot.Rd  compile_troll.Rd  date_sim.Rd  dewtovpd.Rd  download_era.Rd  esat.Rd  extract_era.Rd  extract_era_batch.Rd  format_era.Rd  generate_climate.Rd  (+67 more)
news/: index.html
reference/: TROLL.version.html  TROLLv3_climatedaytime12.html  TROLLv3_daytimevar.html  TROLLv3_input.html  TROLLv3_output.html  TROLLv3_pointcloud.html  TROLLv3_species.html  autogif.html  autoplot-trollsim-method.html  autoplot-trollstack-method.html  generate_climate.html  generate_lidar.html  generate_parameters.html  get_chm,trollsim-method.html  get_chm.html  get_forest,trollsim-method.html  get_forest.html  get_log,trollsim-method.html  get_log.html  index.html  load_output.html  load_sim,trollsim-method.html  load_sim.html  load_stack.html  option.rcontroll.html  pipe.html  print.trollsim.html  rcontroll.html  stack.html  summary,trollsim-method.html  summary.trollsim.html  troll.html  trollCpp.html  trollsim-class.html  trollsim.html  trollstack-class.html  trollstack.html  update_parameters,trollsim-method.html  update_parameters.html
src/: .gitignore  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  RcppExports.gcda  RcppExports.gcno  main_v3.1.2_rcpp.cpp  main_v3.1.3_rcpp.cpp  main_v3.1.6_rcpp.cpp  new_troll.md  troll.cpp  troll_rcpp.cpp  troll_rcpp.gcda  troll_rcpp.gcno
template/: doc_prefix.tex  preamble.tex  template.docx
tests/: testthat.R
tools/: winlib.R  winlibs.R
vignette/: workflow.Rmd
vignettes/: .gitignore  Calibration.Rmd  Gap_filling.Rmd  Lidar_module.Rmd  Schmittetal2020.Rmd  calibration.Rmd  climate.Rmd  (+6 more)
(+48 files in other folders)
